// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem should render properly when it is in active state 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c2 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  opacity: 0;
  font-weight: 600;
}

.c3 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  opacity: 0;
  font-weight: 600;
}

<span
  class="c0 c1"
>
  Home
</span>
`;

exports[`NavItem should render properly when it is in default state 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c2 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  opacity: 0;
  font-weight: 600;
}

.c3 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  opacity: 0;
  font-weight: 600;
}

.c4 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  opacity: 1;
  font-weight: 600;
}

.c5 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  opacity: 1;
  font-weight: 600;
}

<span
  class="c0 c1"
>
  Search
</span>
`;

exports[`NavItem should render properly when it is in hovered state 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c2 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  opacity: 0;
  font-weight: 600;
}

.c3 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  opacity: 0;
  font-weight: 600;
}

.c4 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  opacity: 1;
  font-weight: 600;
}

.c5 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  opacity: 1;
  font-weight: 600;
}

<span
  class="c0 c1"
>
  Search
</span>
`;
